force-app/main/default/objects/Attachment_Document_Type__c/Attachment_Document_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Attachment Document Type</label>
</CustomObject>