force-app/main/default/objects/Attachment_Document_Type__c/fields/Document_type__c.field-meta.xml
<CustomField>
    <fullName>Document_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>