force-app/main/default/objects/Attachment_Document_Type__c/fields/Media_Request_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Request_Document_Type__c</fullName>
    <description>This field is used to store document types of the media request.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used to store document types of the media request.</inlineHelpText>
    <label>Media Request Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>