force-app/main/default/objects/Attachment_Document_Type__c/fields/Media_Request_Document_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Media_Request_Document_Visibility__c</fullName>
    <description>This field is used for multiple file upload lightning web components.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used for multiple file upload lightning web components.</inlineHelpText>
    <label>Media Request Document Visibility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>