force-app/main/default/objects/Attachment_Document_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>